--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,6 +195,7 @@
     <string name="cannot_send_sms">Bitte in den Einstellungen ändern</string>
     <string name="sms_exception">SMS fehlgeschlagen!</string>
     <string name="event_save_notSuccessful">Der Termin wurde nicht gespeichert.</string>
+    <string name="sms_notAbleToSend">SMS fehlgeschlagen! Du bist nicht in der Lage SMS zu versenden, kannst sie jedoch trotzdem annehmen.</string>
     <string name="telephonenumerNotRead">Deine Telefonnummer konnte leider nicht ausgelesen werden. Bitte trage sie hier ein. Bitte achte darauf, dass du die Telefonnummer richtig einträgst, da du sonst keine Rückmeldungen erhältst.</string>
     <string name="thanksphoneNumber">Deine Telefonnummer wurde gespeichert.</string>
     <string name="wrongNumberFormat">Diese Telefonnummer ist ungültig.</string>
