--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,7 +197,7 @@
     <string name="cannot_send_sms">Bitte in den Einstellungen ändern</string>
     <string name="sms_exception">SMS fehlgeschlagen!</string>
     <string name="event_save_notSuccessful">Der Termin wurde nicht gespeichert.</string>
-    <string name="sms_notAbleToSend">Zusage fehlgeschlagen! Um dem Organisator die Zusage zu senden benötigst du eine Sim Card.</string>
+    <string name="sms_notAbleToSend">Rückmeldung fehlgeschlagen! Um dem Organisator die Rückmeldung zu senden benötigst du eine Sim Card.</string>
     <string name="telephonenumerNotRead">Deine Telefonnummer konnte leider nicht ausgelesen werden. Bitte trage sie hier ein. Bitte achte darauf, dass du die Telefonnummer richtig einträgst, da du sonst keine Rückmeldungen erhältst.</string>
     <string name="thanksphoneNumber">Deine Telefonnummer wurde gespeichert.</string>
     <string name="wrongNumberFormat">Diese Telefonnummer ist ungültig.</string>
